# celluloseWorkspace

./: .gitignore  pyproject.toml
src/cnfkit/: __init__.py
src/cnfkit/simulation/: plot_psi.py  psi2S.py  psi_flow.py
src/cnfkit/simulation_20260504/: _memo  plot_psi.py  psi2S.py  psi_equilibrium.py  psi_flow.py
src/cnfkit/simulation_20260511/: psi_equilibrium.py
src/cnfkit/tools/: fmt.py  saxs_gradu_tracks.py
